--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ coreschema==0.0.4         # via coreapi, drf-yasg
 decorator==4.4.2          # via ipython, traitlets
 django-environ==0.4.5     # via -r requirements.in
 django-extensions==2.2.9  # via -r requirements.in
-django==2.2.13            # via -r requirements.in, djangorestframework, drf-yasg
-djangorestframework==3.11.0  # via -r requirements.in, drf-yasg
+django==2.2.13            # via -r requirements.in, djangorestframework, djangorestframework-simplejwt, drf-yasg
+djangorestframework-simplejwt==4.4.0  # via -r requirements.in
+djangorestframework==3.11.0  # via -r requirements.in, djangorestframework-simplejwt, drf-yasg
 drf-yasg==1.17.1          # via -r requirements.in
 factory-boy==2.12.0       # via -r requirements.in
 faker==4.1.0              # via factory-boy
@@ -43,6 +44,7 @@ ptyprocess==0.6.0         # via pexpect
 pycodestyle==2.6.0        # via flake8, flake8-print
 pyflakes==2.2.0           # via flake8
 pygments==2.6.1           # via ipython
+pyjwt==1.7.1              # via djangorestframework-simplejwt
 pyparsing==2.4.7          # via packaging
 python-dateutil==2.8.1    # via faker
 pytz==2020.1              # via django
