--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ coreschema==0.0.4         # via coreapi, drf-yasg
 decorator==4.4.2          # via ipython, traitlets
 django-environ==0.4.5     # via -r requirements.in
 django-extensions==2.2.9  # via -r requirements.in
-django==2.2.13            # via -r requirements.in, djangorestframework, djangorestframework-simplejwt, drf-yasg
+django-filter==2.3.0      # via -r requirements.in
+django==2.2.13            # via -r requirements.in, django-filter, djangorestframework, djangorestframework-simplejwt, drf-yasg
 djangorestframework-simplejwt==4.4.0  # via -r requirements.in
 djangorestframework==3.11.0  # via -r requirements.in, djangorestframework-simplejwt, drf-yasg
 drf-yasg==1.17.1          # via -r requirements.in
