--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ chardet==3.0.4            # via requests
 click==7.1.2              # via pip-tools
 coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
+coverage==5.1             # via -r requirements.in
 decorator==4.4.2          # via ipython, traitlets
 django-environ==0.4.5     # via -r requirements.in
 django-extensions==2.2.9  # via -r requirements.in
