--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,11 @@ coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
 coverage==5.1             # via -r requirements.in
 decorator==4.4.2          # via ipython, traitlets
+django-cors-headers==3.3.0  # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
 django-extensions==2.2.9  # via -r requirements.in
 django-filter==2.3.0      # via -r requirements.in
-django==2.2.13            # via -r requirements.in, django-filter, djangorestframework, djangorestframework-simplejwt, drf-yasg
+django==2.2.13            # via -r requirements.in, django-cors-headers, django-filter, djangorestframework, djangorestframework-simplejwt, drf-yasg
 djangorestframework-simplejwt==4.4.0  # via -r requirements.in
 djangorestframework==3.11.0  # via -r requirements.in, djangorestframework-simplejwt, drf-yasg
 drf-yasg==1.17.1          # via -r requirements.in
