7. Update README.md. Clean project. Last fixes.
Add deploy instructions to README.md.
Delete core app as unnecessary.
Fix load_tasks_to_db management command.

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ WSGI_WORKERS=2
 SECRET_KEY=odbpp60)d7__p^s003cr)lxa2xi_fnx1i61dmb$*hyy2xumqes
 DATABASE_URL=postgresql://todo:todo_password@postgres:5432/todo
 PYTHONBREAKPOINT=ipdb.set_trace
+ALLOWED_HOSTS=*
 
 # id -u && id -g
 SYSTEM_USER=1000:999
